Thu Mar 30 19:25:14 2000  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/WFMO_Reactor.cpp (suspend_handler_i and resume_handler_i):

	  If a handle is resumed, then:

	  - check current handles to undo suspension (*)
	  - check suspended handles to resume
	  - check to_be_added handles to undo suspension

	  If a handle is suspended, then:

	  - check current handles to suspend
	  - check suspended handles to undo resumption (*)
	  - check to_be_added handles to suspend

	  (*) were missing.  Thanks to Ji Wuliu <jiwuliu0952_cn@sina.com>
	  for pointing this out!

Thu Mar 30 15:54:23 2000  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-4.x.h: Only set ACE_HAS_SIGTIMEDWAIT for AIX
          4.3.x. 4.2.x doesn't have it. Thanks to Johnny Chen
          <jchen@informatica.com> for reporting this.

        * THANKS: Added Johnny Chen to the Hall of Fame.

Wed Mar 29 00:01:39 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* netsvcs/lib/Client_Logging_Handler.cpp (handle_input):
	  ACE_OS::closesocket() was being used to do some very "low-level"
 	  closing of handles without assigning a handle to
 	  ACE_INVALID_HANDLE.  This was causing problems.  Therefore, we
 	  now try to use this->peer ().close () if it's different from
 	  handle.  Thanks to Alexander Dergatch <dergy@websci.ru> for
 	  reporting this.  This fixes [BUGID 520].

Tue Mar 28 12:13:12 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Containers_T.h: Fixed the mismatching filename in preamble.

Tue Mar 28 12:06:31 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Array.h: Simply include "ace/Containers_T.h" would work.
	  Removed all other template kludge since they should be handled
	  in Containers_T.h.  Thanks to Airat A. Sadreev
	  <airat@hq.tatenergo.ru> for report this problem.

Tue Mar 28 11:56:56 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Dirent.h"
	* ace/Dirent.cpp: The meaning of __ACE_INLINE__ is just the